fixed play button

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             </div>
         </div>
 
-        <span class="action" id="action">START</span>
+        <div class="action" id="action"> </div>
 
         <div class="controllers">
             <i class="fa fa-play button" id="controller-play"></i>
-            <i class="fa fa-pause button" id="controller-pause"></i>
+            <!-- <i class="fa fa-pause button" id="controller-pause"></i> -->
             <i class="fa fa-stop button" id="controller-break"></i>
         </div>
 
