add changing text and sound

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
         <title>Pomodoro Technique</title>
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
@@ -34,10 +34,10 @@
         </div>
 
         <div class="action" id="action"> </div>
+        <div class="action" id="action-hover"> </div>
 
         <div class="controllers">
             <i class="fa fa-play button" id="controller-play"></i>
-            <!-- <i class="fa fa-pause button" id="controller-pause"></i> -->
             <i class="fa fa-stop button" id="controller-break"></i>
         </div>
 
