now normally i hope it is the last one ...

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
         <div class="clock-group">
             <div id="workTime">
                 <span class="details">WORK</span>
-                <i class="fa fa-caret-up button" id="workTime-up"></i>
+                <i class="fa fa-caret-up button arrow" id="workTime-up"></i>
                 <span class="workTime-clock">
                     <p class="clock" id="workTime-minute">25</p>
                     <p class="clock" >:</p>
                     <p class="clock" id="workTime-second">00</p>
                 </span>
-                <i class="fa fa-caret-down button" id="workTime-down"></i>
+                <i class="fa fa-caret-down button arrow" id="workTime-down"></i>
             </div>
             <div id="rest-time">
                 <span class="details">REST</span>
-                <i class="fa fa-caret-up button"  id="rest-time-up"></i>
+                <i class="fa fa-caret-up button arrow"  id="rest-time-up"></i>
                 <span class="workTime-clock">
                     <p class="clock" id="rest-time-minute">5</p>
                     <p class="clock" >:</p>
                     <p class="clock" id="rest-time-second">00</p>
                 </span>
-                <i class="fa fa-caret-down button"  id="rest-time-down"></i>
+                <i class="fa fa-caret-down button arrow"  id="rest-time-down"></i>
             </div>
         </div>
 
